--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,96 +2,52 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
+      value: Mohammad Hasyim Taufik
     - name: Languages
-      value: English, German
+      value: English, Bahasa, Arabic
+    - name: Anecdote
+      value: Supporting <a href='https://www.liverpoolfc.com/'>Liverpool FC</a> since 2004
 
 - title: Education
   type: time_table
   contents:
     - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+      institution: King Abdullah University of Science and Technology
+      year: 2022 - Present
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+        - Physics-informed neural networks for tomographic applications.
+    - title: MSc
+      institution: King Abdullah University of Science and Technology
+      year: 2020 - 2021
       description:
-        - Description 1.
-        - Description 2.
+        - Physics-informed neural networks for forward modeling in global Earth scale applications.
+        - Machine learning in geosciences track.
+    - title: BSc
+      institution: Bandung Institute of Technology
+      year: 2015 - 2019
+      description:
+        - Optimum Wiener filter for paleoclimate analysis using ultra-high frequency seismic data.
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Machine Learning Engineer Intern
+      institution: Cloud4C
+      year: Jun 2022 - Aug 2022
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+        - Computer vision (segmentation and object detection), natural language processing, cloud architecture (AWS), and recommender system.
+    - title: Geophysicist
+      institution: Pertamina Hulu Kalimantan Timur
+      year: 2019 - 2020
       description:
-        - Description 1.
-        - Description 2.
-
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
+        - Quantitative seismic interpretation, time-depth converison, seismic signal enhancement, and 3D seismically derived pore-pressure distribution.
+    - title: Geophysicist Intern
+      institution: PetroChina
+      year: Jun 2018 - Aug 2018
       description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
-  type: time_table
-  contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
-
-- title: Honors and Awards
-  type: time_table
-  contents:
-    - year: 1921
-      items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
-      items: 
-        - Max Planck Medal
-
-- title: Academic Interests
-  type: nested_list
-  contents:
-    - title: Topic 1.
-      items: 
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
-
-- title: Other Interests
-  type: list
-  contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+        - Multi-attribute seismic analysis, seismic depthing, and rock physics for reservoir characterization.
+    - title: Research Assistants
+      institution: Bandung Institute of Technology
+      year: 2017 - 2019
+      description:
+        - Wide range of geophysical courses from intrumentation to advanced seismic signal analysis.
