--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 title: blank # the website title (if blank, full name will be used instead)
 first_name: Mohammad
-middle_name: H.
+middle_name: Hasyim
 last_name: Taufik
 email: mohammad.taufik@kaust.edu.sa
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
