--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,8 @@ email: hatsyim@gmail.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A PhD student in machine learning in geosciences at King Abdullah University of Science and Technology.
 footer_text: >
+  Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
+  Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
 keywords:  # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
