--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -42,7 +42,7 @@
         - Computer vision (segmentation and object detection), natural language processing, cloud architecture (AWS), and recommender system.
     - title: Geophysicist
       institution: Pertamina Hulu Kalimantan Timur
-      year: 2019 - 2020
+      year: Jun 2019 - May 2020
       description:
         - Quantitative seismic interpretation, time-depth converison, seismic signal enhancement, and 3D seismically derived pore-pressure distribution.
     - title: Geophysicist Intern
@@ -52,6 +52,6 @@
         - Multi-attribute seismic analysis, seismic depthing, and rock physics for reservoir characterization.
     - title: Research Assistants
       institution: Bandung Institute of Technology
-      year: 2017 - 2019
+      year: Aug 2017 - Jun 2019
       description:
         - Wide range of geophysical courses from intrumentation to advanced seismic signal analysis.
